GateWay_ESP/build/log/idf_py_stdout_output_9740
[1/10] Performing build step for 'bootloader'
[1/1] cd /home/anh/PROJECTS/CODE/ESP_IDF/ESP32/GateWay_ESP/build/bootloader/esp-idf/esptool_py && /home/anh/.espressif/python_env/idf5.1_py3.10_env/bin/python /home/anh/ProgramFile/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /home/anh/PROJECTS/CODE/ESP_IDF/ESP32/GateWay_ESP/build/bootloader/bootloader.bin
Bootloader binary size 0x6720 bytes. 0x8e0 bytes (8%) free.
[2/8] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj 
/home/anh/.espressif/tools/xtensa-esp32-elf/esp-2022r1-11.2.0/xtensa-esp32-elf/bin/xtensa-esp32-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.1-dev-2356-gedd815af2e\" -DMBEDTLS_CONFIG_FILE=\"mbedtls/esp_config.h\" -DUNITY_INCLUDE_CONFIG_H -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/anh/PROJECTS/CODE/ESP_IDF/ESP32/GateWay_ESP/build/config -I/home/anh/PROJECTS/CODE/ESP_IDF/ESP32/GateWay_ESP/main -I/home/anh/PROJECTS/CODE/ESP_IDF/ESP32/GateWay_ESP/main/WiFi -I/home/anh/PROJECTS/CODE/ESP_IDF/ESP32/GateWay_ESP/main/Ethernet -I/home/anh/PROJECTS/CODE/ESP_IDF/ESP32/GateWay_ESP/main/UART -I/home/anh/PROJECTS/CODE/ESP_IDF/ESP32/GateWay_ESP/main/GateWay_API -I/home/anh/PROJECTS/CODE/ESP_IDF/ESP32/GateWay_ESP/main/MQTT -I/home/anh/ProgramFile/esp-idf/components/newlib/platform_include -I/home/anh/ProgramFile/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/anh/ProgramFile/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/anh/ProgramFile/esp-idf/components/freertos/esp_additions/include/freertos -I/home/anh/ProgramFile/esp-idf/components/freertos/esp_additions/include -I/home/anh/ProgramFile/esp-idf/components/esp_hw_support/include -I/home/anh/ProgramFile/esp-idf/components/esp_hw_support/include/soc -I/home/anh/ProgramFile/esp-idf/components/esp_hw_support/include/soc/esp32 -I/home/anh/ProgramFile/esp-idf/components/esp_hw_support/port/esp32/. -I/home/anh/ProgramFile/esp-idf/components/esp_hw_support/port/esp32/private_include -I/home/anh/ProgramFile/esp-idf/components/heap/include -I/home/anh/ProgramFile/esp-idf/components/log/include -I/home/anh/ProgramFile/esp-idf/components/soc/include -I/home/anh/ProgramFile/esp-idf/components/soc/esp32/. -I/home/anh/ProgramFile/esp-idf/components/soc/esp32/include -I/home/anh/ProgramFile/esp-idf/components/hal/esp32/include -I/home/anh/ProgramFile/esp-idf/components/hal/include -I/home/anh/ProgramFile/esp-idf/components/hal/platform_port/include -I/home/anh/ProgramFile/esp-idf/components/esp_rom/include -I/home/anh/ProgramFile/esp-idf/components/esp_rom/include/esp32 -I/home/anh/ProgramFile/esp-idf/components/esp_rom/esp32 -I/home/anh/ProgramFile/esp-idf/components/esp_common/include -I/home/anh/ProgramFile/esp-idf/components/esp_system/include -I/home/anh/ProgramFile/esp-idf/components/esp_system/port/soc -I/home/anh/ProgramFile/esp-idf/components/esp_system/port/include/private -I/home/anh/ProgramFile/esp-idf/components/xtensa/include -I/home/anh/ProgramFile/esp-idf/components/xtensa/esp32/include -I/home/anh/ProgramFile/esp-idf/components/lwip/include -I/home/anh/ProgramFile/esp-idf/components/lwip/include/apps -I/home/anh/ProgramFile/esp-idf/components/lwip/include/apps/sntp -I/home/anh/ProgramFile/esp-idf/components/lwip/lwip/src/include -I/home/anh/ProgramFile/esp-idf/components/lwip/port/esp32/include -I/home/anh/ProgramFile/esp-idf/components/lwip/port/esp32/include/arch -I/home/anh/ProgramFile/esp-idf/components/esp_ringbuf/include -I/home/anh/ProgramFile/esp-idf/components/efuse/include -I/home/anh/ProgramFile/esp-idf/components/efuse/esp32/include -I/home/anh/ProgramFile/esp-idf/components/driver/include -I/home/anh/ProgramFile/esp-idf/components/driver/deprecated -I/home/anh/ProgramFile/esp-idf/components/driver/esp32/include -I/home/anh/ProgramFile/esp-idf/components/esp_pm/include -I/home/anh/ProgramFile/esp-idf/components/mbedtls/port/include -I/home/anh/ProgramFile/esp-idf/components/mbedtls/mbedtls/include -I/home/anh/ProgramFile/esp-idf/components/mbedtls/mbedtls/library -I/home/anh/ProgramFile/esp-idf/components/mbedtls/esp_crt_bundle/include -I/home/anh/ProgramFile/esp-idf/components/esp_app_format/include -I/home/anh/ProgramFile/esp-idf/components/bootloader_support/include -I/home/anh/ProgramFile/esp-idf/components/bootloader_support/bootloader_flash/include -I/home/anh/ProgramFile/esp-idf/components/esp_partition/include -I/home/anh/ProgramFile/esp-idf/components/app_update/include -I/home/anh/ProgramFile/esp-idf/components/spi_flash/include -I/home/anh/ProgramFile/esp-idf/components/pthread/include -I/home/anh/ProgramFile/esp-idf/components/esp_timer/include -I/home/anh/ProgramFile/esp-idf/components/app_trace/include -I/home/anh/ProgramFile/esp-idf/components/esp_event/include -I/home/anh/ProgramFile/esp-idf/components/nvs_flash/include -I/home/anh/ProgramFile/esp-idf/components/esp_phy/include -I/home/anh/ProgramFile/esp-idf/components/esp_phy/esp32/include -I/home/anh/ProgramFile/esp-idf/components/vfs/include -I/home/anh/ProgramFile/esp-idf/components/esp_netif/include -I/home/anh/ProgramFile/esp-idf/components/wpa_supplicant/include -I/home/anh/ProgramFile/esp-idf/components/wpa_supplicant/port/include -I/home/anh/ProgramFile/esp-idf/components/wpa_supplicant/esp_supplicant/include -I/home/anh/ProgramFile/esp-idf/components/esp_wifi/include -I/home/anh/ProgramFile/esp-idf/components/unity/include -I/home/anh/ProgramFile/esp-idf/components/unity/unity/src -I/home/anh/ProgramFile/esp-idf/components/cmock/CMock/src -I/home/anh/ProgramFile/esp-idf/components/console -I/home/anh/ProgramFile/esp-idf/components/http_parser -I/home/anh/ProgramFile/esp-idf/components/esp-tls -I/home/anh/ProgramFile/esp-idf/components/esp-tls/esp-tls-crypto -I/home/anh/ProgramFile/esp-idf/components/esp_adc/include -I/home/anh/ProgramFile/esp-idf/components/esp_adc/interface -I/home/anh/ProgramFile/esp-idf/components/esp_adc/esp32/include -I/home/anh/ProgramFile/esp-idf/components/esp_adc/deprecated/include -I/home/anh/ProgramFile/esp-idf/components/esp_eth/include -I/home/anh/ProgramFile/esp-idf/components/esp_gdbstub/include -I/home/anh/ProgramFile/esp-idf/components/esp_gdbstub/xtensa -I/home/anh/ProgramFile/esp-idf/components/esp_gdbstub/esp32 -I/home/anh/ProgramFile/esp-idf/components/esp_hid/include -I/home/anh/ProgramFile/esp-idf/components/tcp_transport/include -I/home/anh/ProgramFile/esp-idf/components/esp_http_client/include -I/home/anh/ProgramFile/esp-idf/components/esp_http_server/include -I/home/anh/ProgramFile/esp-idf/components/esp_https_ota/include -I/home/anh/ProgramFile/esp-idf/components/esp_lcd/include -I/home/anh/ProgramFile/esp-idf/components/esp_lcd/interface -I/home/anh/ProgramFile/esp-idf/components/protobuf-c/protobuf-c -I/home/anh/ProgramFile/esp-idf/components/protocomm/include/common -I/home/anh/ProgramFile/esp-idf/components/protocomm/include/security -I/home/anh/ProgramFile/esp-idf/components/protocomm/include/transports -I/home/anh/ProgramFile/esp-idf/components/esp_local_ctrl/include -I/home/anh/ProgramFile/esp-idf/components/esp_psram/include -I/home/anh/ProgramFile/esp-idf/components/espcoredump/include -I/home/anh/ProgramFile/esp-idf/components/espcoredump/include/port/xtensa -I/home/anh/ProgramFile/esp-idf/components/wear_levelling/include -I/home/anh/ProgramFile/esp-idf/components/sdmmc/include -I/home/anh/ProgramFile/esp-idf/components/fatfs/diskio -I/home/anh/ProgramFile/esp-idf/components/fatfs/vfs -I/home/anh/ProgramFile/esp-idf/components/fatfs/src -I/home/anh/ProgramFile/esp-idf/components/idf_test/include -I/home/anh/ProgramFile/esp-idf/components/idf_test/include/esp32 -I/home/anh/ProgramFile/esp-idf/components/ieee802154/include -I/home/anh/ProgramFile/esp-idf/components/json/cJSON -I/home/anh/ProgramFile/esp-idf/components/mqtt/esp-mqtt/include -I/home/anh/ProgramFile/esp-idf/components/perfmon/include -I/home/anh/ProgramFile/esp-idf/components/spiffs/include -I/home/anh/ProgramFile/esp-idf/components/ulp/ulp_common/include -I/home/anh/ProgramFile/esp-idf/components/ulp/ulp_common/include/esp32 -I/home/anh/ProgramFile/esp-idf/components/wifi_provisioning/include -mlongcalls -Wno-frame-address  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fmacro-prefix-map=/home/anh/PROJECTS/CODE/ESP_IDF/ESP32/GateWay_ESP=. -fmacro-prefix-map=/home/anh/ProgramFile/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj -c /home/anh/PROJECTS/CODE/ESP_IDF/ESP32/GateWay_ESP/main/main.c
In file included from /home/anh/PROJECTS/CODE/ESP_IDF/ESP32/GateWay_ESP/main/main.c:20:
/home/anh/PROJECTS/CODE/ESP_IDF/ESP32/GateWay_ESP/main/GateWay_API/GateWay_API.h:47: warning: "DATA_WIFI_CONNECT" redefined
   47 | #define DATA_WIFI_CONNECT       "WIFI DISCONNECTED"
      | 
/home/anh/PROJECTS/CODE/ESP_IDF/ESP32/GateWay_ESP/main/GateWay_API/GateWay_API.h:46: note: this is the location of the previous definition
   46 | #define DATA_WIFI_CONNECT       "WIFI CONNECTED"
      | 
/home/anh/PROJECTS/CODE/ESP_IDF/ESP32/GateWay_ESP/main/main.c: In function 'checkQueue_UART':
/home/anh/PROJECTS/CODE/ESP_IDF/ESP32/GateWay_ESP/main/main.c:103:25: error: enumeration value 'Command_NetWork_State' not handled in switch [-Werror=switch]
  103 |                         switch(packet.command){
      |                         ^~~~~~
cc1: some warnings being treated as errors
ninja: build stopped: subcommand failed.
